--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="map"
+<!-- <div class="map"
      leaflet
      [leafletOptions]="options">
-</div>
+</div> -->
+
+<div id="map" class="map-content"></div>
